2001-03-13  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* ports.c (scm_port_mode): Changed `mode' array size to 4.

2001-03-12  Keisuke Nishida  <kxn30@po.cwru.edu>

	* strports.c (scm_object_to_string): New procedure.
	(scm_strprint_obj): Deprecated.
	* strports.h: Reflect the changes.

2001-03-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* goops.h (SCM_VALIDATE_PUREGENERIC):  New macro.

	* goops.c (scm_m_atslot_ref, scm_m_atslot_set_x,
	scm_m_atdispatch):  Provide definitions for FUNC_NAME.  Don't use
	SCM_ASSYNT to check for correct argument types.  Either use some
	SCM_VALIDATE_* macro or an explicit test.

	(scm_make_foreign_object):  Don't use SCM_ASSERT to check for
	misc-errors.

	* macros.h (SCM_ASSYNT):  On assertion failure, issue a misc-error
	instead of calling scm_wta.

2001-03-12  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* load.c (scm_primitive_load, scm_primitive_load_path),
	(scm_sys_search_load_path): Corrected docstrings (file ->
	filename).

	* eval.c (scm_force): Added texinfo markup to docstring.
	(scm_promise_p): Renamed parameter to `obj' to match docstring.

	* debug-malloc.c: Reinserted #include <stdio.h>.

2001-03-11  Keisuke Nishida  <kxn30@po.cwru.edu>

	* list.c (s_scm_reverse_x): Use SCM_VALIDATE_LIST.

	* environments.c, error.c, eval.c, filesys.c, hashtab.c, load.c,
	net_db.c, procprop.c, read.c, scmsigs.c, socket.c, struct.c:
	Use SCM_LISTn instead of scm_listify.

2001-03-10  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* _scm.h: Removed #include <errno.h>.

	* error.c, net_db.c, putenv.c, stime.c: Removed declaration of
	errno variable (can be a macro on some systems, for example when
	using linux libc with threads).

	* error.c, filesys.c, gc.c, ioext.c, iselect.c, net_db.c, ports.c,
	posix.c, print.c, putenv.c, scmsigs.c, script.c, simpos.c, smob.c,
	socket.c, srcprop.c, stime.c, strop.c, unif.c, vports.c: Added
	#include <errno.h> in these 20 out of 100 files.
	
2001-03-10  Gary Houston  <ghouston@arglist.com>
